# google_finance_automation

./: README.md
.github/workflows/: manual.yml  nightly_run
python_selenium_POM_PageFactory/: pyproject.toml  requirements.txt
python_selenium_POM_PageFactory/github/workflows/: manual.yml  nightlyrun.yml
python_selenium_POM_PageFactory/pages/: google_finance_homepage.py
python_selenium_POM_PageFactory/tests/: conftest.py  test_google_finance.py
