[tool.poetry]
name = "python-selenium-pom-pagefactory"
version = "0.1.0"
description = ""
authors = ["Sesha Atukuri <athkurisesha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
